<resources>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dg_tabframe_mcall_btn_text1">首页</string>
    <string name="dg_tabframe_mcall_btn_text2">消息</string>
    <string name="dg_tabframe_mcall_btn_text3">酒友</string>
    <string name="dg_tabframe_mcall_btn_text4">我的</string>
    <string name="register">快速注册</string>
    <string name="now_register">立即注册</string>
    <string name="login">登录</string>
    <string name="phone_before">+86</string>
    <string name="phone_num">手机号</string>
    <string name="input_check_code">请输入短信验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="set_password">设置登录密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="input_new_pwd_again">重新输入新密码</string>
    <string name="sure_to_find">确认找回</string>
    <string name="f1_des">身边店铺买酒，立刻送货上门</string>
    <string name="login_register">登录/注册</string>
    <string name="login_only">登录</string>
    <string name="service_phone">客服热线</string>
    <string name="my_order">我的订单</string>
    <string name="buy_order">采购订单</string>
    <string name="sell_order">销售订单</string>
    <string name="my_jiujuan">我的酒卷</string>
    <string name="my_good_car">购物车</string>
    <string name="my_jifen">积分商城</string>
    <string name="my_ma">我的店铺码</string>
    <string name="my_input_ma">输入店铺码</string>
    <string name="my_work">工作台</string>
    <string name="my_yijian">意见反馈</string>
    <string name="my_setting">设置</string>
    <string name="my_share_ma">分享优惠</string>
    <string name="my_jiuyou_ma">输入优惠</string>
    <string name="add_address">新增地址</string>
    <string name="ping_jia">评价</string>
    <string name="photo">头像</string>
    <string name="name">名字</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="phone">手机号码</string>
    <string name="my_address">我的地址</string>
    <string name="set_birthday">设置生日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="please_input_ma">请输入酒友码</string>
    <string name="sure">确定</string>
    <string name="go_back">返回</string>
    <string name="share_ma">我的店铺码</string>
    <string name="share_ma_des1">快快输入我的店铺码,这样可以</string>
    <string name="share_ma_des2">直接进入我的店铺买酒</string>
    <string name="you_ma">我的店铺码</string>
    <string name="yijian">请输入产品意见，我们不断优化体验</string>
    <string name="word_num">0/140</string>
    <string name="send">发送</string>
    <string name="jifen">我的积分</string>
    <string name="jifen2">积分可以直接抵现金</string>
    <string name="jifen_market">积分商城</string>
    <string name="change_recode">兑换记录</string>
    <string name="change">兑换</string>
    <string name="already_change">已兑换</string>
    <string name="message">短信</string>
    <string name="chat">聊天</string>
    <string name="call">电话</string>
    <string name="close_account">去结算</string>
    <string name="go_buy_car">去购物车</string>
    <string name="choose_way_to_pay">选择支付方式</string>
    <string name="weixin_pay">微信支付</string>
    <string name="wexin_pay_des">简单快捷，推荐使用</string>
    <string name="zhifu_pay">支付宝快捷支付</string>
    <string name="zhifu_pay_des">推荐已安装支付宝APP者使用</string>
    <string name="yinlian_pay">银联手机支付</string>
    <string name="yinlian_pay_des">银行最多，无需开通网银也能使用</string>
    <string name="xianxia_pay">线下支付</string>
    <string name="xianxia_pay_des">也可直接线下支付</string>
    <string name="commit_order">提交订单</string>
    <string name="cancel_order">取消订单</string>
    <string name="go_to_pay">去支付</string>
    <string name="version">版本号</string>
    <string name="clean">清除缓存</string>
    <string name="push">推送消息</string>
    <string name="comment">评价一下</string>
    <string name="about">关于我们</string>
    <string name="problem">常见问题</string>
    <string name="logout">退出登录</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="dao_hang">导航</string>
    <string name="zero">0</string>
    <string name="all_selected">全选</string>
    <string name="count">合计</string>
    <string name="finish">完成</string>
    <string name="del">删除</string>
    <string name="choose_type">选择规格：</string>
    <string name="num">数量</string>
    <string name="type">规格</string>
    <string name="ping">瓶</string>
    <string name="xiang">箱</string>
    <string name="des">描述</string>
    <string name="yuan">元</string>
    <string name="all">全部</string>
    <string name="wait_to_pay">待付款</string>
    <string name="wait_to_sure">待确认</string>
    <string name="wait_to_send">待发货</string>
    <string name="wait_to_receive">待收货</string>
    <string name="wait_to_comment">待评价</string>
    <string name="already_get">已收货</string>
    <string name="refuse">已拒绝</string>
    <string name="back">待退货</string>
    <string name="close">已关闭</string>
    <string name="order_comment">评价一下这件商品吧</string>
    <string name="about_us">王朝大酒窖</string>
    <string name="this_ver">1.0.0</string>
    <string name="copy_right">copyright  2012-2015</string>
    <string name="ver_owner">王朝大酒窖版权所有</string>
    <string name="receiver">收货人</string>
    <string name="phone_number">手机号码</string>
    <string name="select_area">选择地区</string>
    <string name="detail_address">详细地址</string>
    <string name="zip_code">邮政编码</string>
    <string name="set_name">名字</string>
    <string name="phone_num_11">11位手机号</string>
    <string name="area_info">地区信息</string>
    <string name="detail_info">街道门牌信息</string>
    <string name="zhi">至</string>
    <string name="shang_ping_gl">酒库</string>
    <string name="ding_dan_gl">出货</string>
    <string name="shang_ping_cg">进货</string>
    <string name="wo_de_sr">钱包</string>
    <string name="ye_wu_y">我的客户</string>
    <string name="set_time">设置营业时间</string>
    <string name="active_time">营业时间</string>
    <string name="shang_jia_gl">商家管理</string>
    <string name="ji_feng_sc">积分商城</string>
    <string name="wo_de_fx">我的分享</string>
    <string name="yi_jian_fk">意见反馈</string>
    <string name="xin_yu_dj">信誉等级</string>
    <string name="she_zhi">设置</string>
    <string name="shang_ping_mc">商品名称</string>
    <string name="jia_ge">价格</string>
    <string name="shui_bian_xdsmb">随便写点什么吧</string>
    <string name="mei_xiang">/箱</string>
    <string name="mei_ping">/瓶</string>
    <string name="ku_cun">库存</string>
    <string name="wan_cheng">完成</string>
    <string name="sjgl">商家管理</string>
    <string name="wdfx">我的分享</string>
    <string name="xydj">信誉等级</string>
    <string name="dpmc">店铺名称</string>
    <string name="wz">位置</string>
    <string name="yysj">营业时间</string>
    <string name="sfyy">是否营业</string>
    <string name="gong_gao">公告</string>
    <string name="shou_ru">收入</string>
    <string name="zhi_chu">支出</string>
    <string name="zan">赞</string>
    <string name="ping_lun">评论</string>
    <string name="fa_song">发送</string>
    <string name="work_check">考勤</string>
    <string name="work_kh_manager">客户管理</string>
    <string name="work_sp">审批</string>
    <string name="work_hb">工作日报</string>
    <string name="work_contacts">联系</string>
    <string name="work_card">打卡</string>
    <string name="work_leave">请假</string>
    <string name="work_date">日期</string>
    <string name="work_up_time">上班时间</string>
    <string name="work_up_area">上班地点</string>
    <string name="work_down_time">下班时间</string>
    <string name="work_down_area">下班地点</string>
    <string name="work_bz">备注</string>
    <string name="work_search">搜索</string>
    <string name="work_leave_type">请假类型</string>
    <string name="work_leave_open_time">开始时间</string>
    <string name="work_leave_end_time">结束时间</string>
    <string name="work_leave_total_time">请假天数</string>
    <string name="work_sp_person">审批人</string>
    <string name="work_sp_state">审批状态</string>
    <string name="work_submit">提交</string>
    <string name="work_hmc">花名册</string>
    <string name="work_order_manager">订单管理</string>
    <string name="work_kc_manager">库存管理</string>
    <string name="main_name">融云</string>
    <string name="main_conversation">会话</string>
    <string name="main_group">广场</string>
    <string name="main_chatroom">通讯录</string>
    <string name="main_customer">意见反馈</string>
    <string name="main_customer_xn">小能客服</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="add_select_group">创建群组</string>
    <string name="set_personal_information">我的账号</string>
    <string name="set_news_reminded">新消息提醒</string>
    <string name="set_privacy">隐私</string>
    <string name="set_set">设置</string>
    <string name="set_rongcloud">关于 SealTalk</string>
    <string name="set_logout">注销</string>
    <string name="de_save">"保存"</string>
    <string name="no_read_message">"···"</string>
    <string name="login_success">"登录成功"</string>
    <string name="new_message_notice">开启消息免打扰</string>
    <string name="new_message_show">新消息通知</string>
    <string name="new_message_voice">声音</string>
    <string name="new_message_vibration">震动</string>
    <string name="new_message_prompt_voice">新消息提示音</string>
    <string name="new_message_follow_system">跟随系统</string>
    <string name="friend_confirmation">加我好友时需要验证</string>
    <string name="the_blacklist">黑名单</string>
    <string name="join_the_blacklist">加入黑名单</string>
    <string name="blacklist_empty">黑名单为空</string>
    <string name="portrait">头像</string>
    <string name="my_username">昵称</string>
    <string name="update_log">更新日志</string>
    <string name="function_introduce">功能介绍</string>
    <string name="version_number">V2.1.0</string>
    <string name="dv_document">开发者文档</string>
    <string name="rongcloud_web">官方网站</string>
    <string name="new_version_update">当前版本</string>
    <string name="de_notification_start">开始时间</string>
    <string name="de_notification_end">结束时间</string>
    <string name="de_item_delete_friend">"删除"</string>
    <string name="de_actionbar_myacc">"个人账号"</string>
    <string name="de_actionbar_sub_group">"群组"</string>
    <string name="de_actionbar_sub_private">"我的私人会话"</string>
    <string name="de_actionbar_sub_discussion">"我的讨论组"</string>
    <string name="de_actionbar_sub_system">"系统消息"</string>
    <string name="de_actionbar_sub_defult">"聊天"</string>
    <string name="de_actionbar_set_public">"公众号"</string>
    <string name="de_actionbar_system">"系统消息"</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="de_notification_information">开启后，在设定时间段内收到新消息时不会响铃或振动。</string>
    <string name="de_group_list_default_discussion_name">讨论组</string>
    <string name="de_message_content_draft">[草稿]</string>
    <string name="de_message_at_me">[有人@我]</string>
    <string name="start_chat">发起会话</string>
    <string name="network_not_available">网络不可用</string>
    <string name="login_api_fail">登录请求接口失败</string>
    <string name="sync_userinfo_api_fail">同步用户信息接口请求失败</string>
    <string name="get_token_api_fail">获取token请求接口失败</string>
    <string name="sync_group_api_fail">同步群组信息请求接口失败</string>
    <string name="phone_or_psw_error">手机或者密码错误</string>
    <string name="phone_number_is_null">手机号不能为空</string>
    <string name="Illegal_phone_number">非法手机号</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="phone_number_available">手机号可用</string>
    <string name="phone_number_has_been_registered">手机号已被注册</string>
    <string name="messge_send">短信已发出,请注意查收</string>
    <string name="message_frequency">短信发送频率超限</string>
    <string name="captcha_overdue">验证码过期,请重新请求</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="register_success">注册成功</string>
    <string name="forgot_password">找回密码</string>
    <string name="new_user">新用户</string>
    <string name="Login">登录</string>
    <string name="password">密码</string>
</resources>