<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/color_my_bg">
    <com.xuan.bigdog.lib.widgets.title.DGTitleLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/logoIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_273"/>
        <LinearLayout
            android:layout_below="@id/logoIv"
            android:layout_marginTop="@dimen/dimen_48"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:text="@string/about_us"/>
            <TextView
                android:id="@+id/versionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:text="@string/this_ver"/>
        </LinearLayout>
       <TextView
           android:id="@+id/copyTv"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="@dimen/dimen_90"
           android:layout_centerHorizontal="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/FontBlack14"
           android:text="@string/copy_right"/>
        <TextView
            android:layout_above="@id/copyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontBlack16"
            android:text="@string/ver_owner"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</LinearLayout>