<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:fitsSystemWindows="true"
    >
    <com.xuan.bigdog.lib.widgets.title.DGTitleLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:layout_marginTop="@dimen/dimen_48"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_divider"
        android:background="@color/color_divider"/>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/color_white"
        android:paddingLeft="@dimen/dimen_48"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150">
            <TextView
                android:id="@+id/receiverTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:layout_centerVertical="true"
                android:text="@string/receiver"/>
            <EditText
                android:id="@+id/receiverEt"
                android:layout_toRightOf="@id/receiverTv"
                android:layout_marginLeft="@dimen/dimen_48"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:layout_centerVertical="true"
                android:hint="@string/set_name"/>
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_divider"
                android:background="@color/color_divider"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150">
            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:layout_centerVertical="true"
                android:text="@string/phone_number"/>
            <EditText
                android:id="@+id/phoneEt"
                android:layout_toRightOf="@id/phoneTv"
                android:layout_marginLeft="@dimen/dimen_48"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:layout_centerVertical="true"
                android:hint="@string/phone_num_11"/>
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_divider"
                android:background="@color/color_divider"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/selectAreaLayout"
            android:background="@drawable/item_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150">
            <TextView
                android:id="@+id/areaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:layout_centerVertical="true"
                android:text="@string/select_area"/>
            <TextView
                android:id="@+id/areaTv"
                android:layout_toRightOf="@id/areaLabel"
                android:layout_marginLeft="@dimen/dimen_48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:hint="@string/area_info"
                android:layout_centerVertical="true" />
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_divider"
                android:background="@color/color_divider"/>
        </RelativeLayout>

        <RelativeLayout
            android:paddingTop="@dimen/dimen_48"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_270">
            <TextView
                android:id="@+id/detailAddressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:text="@string/detail_address"/>
            <EditText
                android:id="@+id/detailEt"
                android:layout_toRightOf="@id/detailAddressTv"
                android:layout_marginLeft="@dimen/dimen_48"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/FontBlack16"
                android:gravity="top"
                android:hint="@string/detail_info"/>
            <View
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_divider"
                android:background="@color/color_divider"/>
        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150">
            <TextView
                android:id="@+id/zipCodeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:layout_centerVertical="true"
                android:text="@string/zip_code"/>
            <EditText
                android:id="@+id/zipCodeEt"
                android:layout_toRightOf="@id/zipCodeTv"
                android:layout_marginLeft="@dimen/dimen_48"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FontBlack16"
                android:layout_centerVertical="true"
                android:hint="@string/zip_code"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_divider"
        android:background="@color/color_divider"/>
</LinearLayout>