<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/color_bg">
    <com.xuan.bigdog.lib.widgets.title.DGTitleLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_48">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_166"
            android:background="@drawable/border_shape">
            <TextView
                android:id="@+id/numTv"
                android:layout_width="@dimen/dimen_171"
                android:layout_height="match_parent"
                style="@style/FontBlack16"
                android:gravity="center"
                android:text="@string/phone_before"/>
            <View
                android:id="@+id/verticlaView1"
                android:layout_width="@dimen/dimen_divider"
                android:layout_height="match_parent"
                android:background="@color/color_divider"
                android:layout_toRightOf="@id/numTv"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@id/verticlaView1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/phoneEt"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_weight="1"
                    android:background="@null"
                    android:singleLine="true"
                    android:hint="@string/phone_num"
                    android:paddingLeft="@dimen/dimen_48"
                    android:layout_height="match_parent" />
                <ImageView
                    android:layout_marginRight="@dimen/dimen_60"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/phoneDel"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_del"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/dimen_48"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_166"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/codeEt"
                android:layout_width="@dimen/dimen_0"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:hint="@string/input_check_code"
                android:paddingLeft="@dimen/dimen_48"
                android:background="@drawable/border_shape"/>
            <Button
                android:id="@+id/codeBtn"
                android:layout_marginLeft="@dimen/dimen_33"
                android:layout_width="@dimen/dimen_0"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="@style/FontGray16"
                android:text="@string/get_check_code"
                android:background="@drawable/border_shape"/>
        </LinearLayout>
        <EditText
            android:id="@+id/setCodeEt"
            android:layout_marginTop="@dimen/dimen_48"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_166"
            android:hint="@string/set_password"
            android:paddingLeft="@dimen/dimen_48"
            android:background="@drawable/border_shape"/>
        <Button
            android:id="@+id/registerBtn"
            android:layout_marginTop="@dimen/dimen_48"
            android:layout_width="match_parent"
            style="@style/FontWhite16"
            android:text="@string/now_register"
            android:layout_height="@dimen/dimen_166"
            android:background="@drawable/btn_click"
            />
    </LinearLayout>
</LinearLayout>