<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_540"
        android:background="@color/color_jifen_red"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_60"
        android:paddingTop="@dimen/dimen_60"
        >
        <TextView
            android:id="@+id/myJifenTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontLightGray16"
            android:text="@string/jifen"
            />
        <TextView
            android:layout_below="@id/myJifenTv"
            android:layout_marginTop="@dimen/dimen_48"
            android:id="@+id/jifenNumTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontWhite40"
            android:text="50"/>
        <TextView
            android:layout_toRightOf="@id/jifenNumTv"
            android:layout_below="@id/myJifenTv"
            android:layout_alignBaseline="@id/jifenNumTv"
            android:layout_marginLeft="@dimen/dimen_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontWhite16"
            android:text="个"/>
        <TextView
            android:layout_below="@id/jifenNumTv"
            android:layout_marginTop="@dimen/dimen_69"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontLightGray14"
            android:text="@string/jifen2"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_135"
        android:orientation="horizontal"
        android:background="@color/color_red_theme">
        <RelativeLayout
            android:id="@+id/marketLayout"
            android:layout_width="@dimen/dimen_0"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontWhite16"
                android:text="@string/jifen_market"
                android:layout_centerInParent="true"/>
            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_6"
                android:background="@color/color_orange"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <View
            android:layout_width="@dimen/dimen_divider"
            android:layout_height="@dimen/dimen_69"
            android:layout_gravity="center_vertical"
            android:background="@color/color_divider"/>
        <RelativeLayout
            android:id="@+id/changeLayout"
            android:layout_width="@dimen/dimen_0"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontWhite16"
                android:text="@string/change_recode"
                android:layout_centerInParent="true"/>
            <View
                android:visibility="invisible"
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_6"
                android:background="@color/color_orange"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>