<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/color_bg">
    <!--标题-->
    <com.xuan.bigdog.lib.widgets.title.DGTitleLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.xuan.bigappleui.lib.view.scrollview.BUVerticalScrollView
        android:layout_below="@+id/titleLayout"
        android:layout_above="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--常规购买-->
            <com.xuan.bigappleui.lib.view.listview.BUHighHeightListView
                android:id="@+id/normalListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:scrollbars="none"
                android:listSelector="#00000000"
                android:fadingEdgeLength="@dimen/dimen_0" />
            <!--市场支持-->
            <com.xuan.bigappleui.lib.view.listview.BUHighHeightListView
                android:id="@+id/marketListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:scrollbars="none"
                android:listSelector="#00000000"
                android:fadingEdgeLength="@dimen/dimen_0" />
        </LinearLayout>
    </com.xuan.bigappleui.lib.view.scrollview.BUVerticalScrollView>
    <!--底部栏-->
    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_alignParentBottom="true"
        android:background="@color/color_translucent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_168"
        android:paddingLeft="@dimen/dimen_48">
        <com.zjyeshi.dajiujiao.buyer.views.other.IVCheckBox
            android:id="@+id/selectIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_selected"
            android:layout_centerVertical="true" />
        <TextView
            android:id="@+id/allSelectTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontWhite14"
            android:text="@string/all_selected"
            android:layout_toRightOf="@id/selectIv"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_18"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_toRightOf="@id/allSelectTv"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_87"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontWhite14"
                android:text="@string/count"
                />
            <TextView
                android:id="@+id/priceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontWhite16"
                android:text="@string/zero"
                android:layout_marginTop="@dimen/dimen_18"
                />
        </LinearLayout>
        <Button
            android:id="@+id/postOrderBtn"
            android:layout_width="@dimen/dimen_366"
            android:layout_height="match_parent"
            android:background="@drawable/no_corner_btn_click"
            style="@style/FontWhite16"
            android:text="@string/commit_order"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</RelativeLayout>